Fix alignment of logo in small header

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -87,7 +87,8 @@ html, body {
 	height: 100px;
 	width: 200px;
 	float: left;
-	margin-top: -15px;
+	margin: 5px 15px 0 0;
+	background-position: top;
 }
 
 @media (max-width: 700px) {
